# halo2-liam-eagen-msm

./: Cargo.toml
src/: argument_witness_calc.rs  config.rs  config.rs.bac  expr_blackbox.rs  instructions.rs  layout.md  lib.rs  negbase_utils.rs  precompute_fft_aux_data.rs  precomputed_fft_data.rs  regular_functions_utils.rs  scripts.rs
src/testing_stuff/: boundary_test.rs  challenge_postprocessing_test.rs  mod.rs
