[package]
name = "halo2-liam-eagen-msm"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
halo2 = { package = "halo2_proofs", git = "https://github.com/levs57/halo2", features = ["circuit-params"] }
halo2curves = { package = "halo2curves", git = "https://github.com/privacy-scaling-explorations/halo2curves"}
# halo2 = { package = "halo2_proofs", path = "../halo2/halo2_proofs", features = ["circuit-params"]}
group = "0.13"
ff = "0.13"
subtle = { version = "2.3", default-features = false }
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
rayon-core = "1.11.0"

[dev-dependencies]

[features]
sanity-check = []
info = []
default = ["sanity-check"]